tests/ui/abi/sparcv8plus.sparc_cpu_v9.stderr
error: -v8plus,+v9
  --> $DIR/sparcv8plus.rs:40:1
   |
LL | compile_error!("-v8plus,+v9");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

